Fix taglist suggestion is not visible at all

--- a/api/templates/default/etemplate2.css
+++ b/api/templates/default/etemplate2.css
@@ -1042,6 +1042,8 @@ ul.et2_link_string {
 /* min-height to fix calculations done while hidden */
 .et2_taglist, .et2_taglist > div.ms-ctn  {
 	min-height: 23px;
+	margin-top:5px;
+	margin-bottom:5px;
 }
 /* Toggle single / multiple */
 .et2_taglist_toggle {
@@ -1060,7 +1062,7 @@ ul.et2_link_string {
 }
 
 .et2_taglist_toggle > div.toggle {
-	top: 1px;
+	top: 6px;
 	width: 23px;
     height: 23px;
     position: absolute;
